--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
                 <img class="imagem-1" src="img/wolf1.jpg" alt="Wolf 1">
 
-                <p>É um sobrevivente da Era do Gelo, originário do Pleistoceno Superior, cerca de 300 mil anos atrás.[2] O sequenciamento de DNA e estudos.</p>
+                <p class="destaque">É um sobrevivente da Era do Gelo, originário do Pleistoceno Superior, cerca de 300 mil anos atrás.[2] O sequenciamento de DNA e estudos.</p>
 
                 <img class="imagem-2" src="img/wolf2.jpg" alt="Wolf 2">
 
@@ -84,7 +84,7 @@
                     <p>É um sobrevivente da Era do Gelo, originário do Pleistoceno Superior, cerca de 300 mil anos atrás.[2] O sequenciamento de DNA e estudos genéticos reafirmam que o lobo cinzento é ancestral do cão doméstico.</p>
                 </div>
 
-                <img class="col-wide" src="img/wolf3.jpg" alt="Wolf 3">
+                <img class="col-wide imagem-3" src="img/wolf3.jpg" alt="Wolf 3">
 
             </main>
 
