--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             </aside>
 
             <footer class="footer">
-                <p>João Alejandro 2020 - Alguns direitos reservados.</p>
+                <p>João Alejandro <script>document.write(new Date().getFullYear())</script> - Alguns direitos reservados.</p>
             </footer>
         </div>
         
